# hass-mqtt-device-healthcheck

./: .pre-commit-config.yaml  Dockerfile  README.md  ble2ha.js  govee_ble2ha.js  pyproject.toml
shelly_scripts/: ble2ha.js  ha_switch.js
src/app/: devices.yml  handler.py  homeassistant.py  main.py  settings.py
